--- a/apps/sandbox/src/content/docs/theming.mdx
+++ b/apps/sandbox/src/content/docs/theming.mdx
@@ -2,8 +2,7 @@
 title: "Theming"
 ---
 
-import Badge from "../../packages";
-import Callout from "../../components/Callout";
+import Callout from "../../components/callout";
 
 <Callout type='warning'>All the samples below are using jsx syntax, be careful.</Callout>
 
