--- a/apps/sandbox/src/pages/changelog.mdx
+++ b/apps/sandbox/src/pages/changelog.mdx
@@ -3,6 +3,6 @@ title: "Changelog"
 layout: ../layouts/main.astro
 ---
 
-import Logger from "../components/Logger.astro";
+import Logger from "../components/logger.astro";
 
 <Logger title='1.0.0' description='Improve features like styles by css.' />
