--- a/apps/sandbox/src/content/docs/installation.mdx
+++ b/apps/sandbox/src/content/docs/installation.mdx
@@ -3,9 +3,15 @@ title: Installation
 ---
 
 import NPM from "../../components/npm";
+import Callout from "../../components/callout";
 
 Pick your favorite framework / library and install the package.
 
 <NPM show client:load />
 
 For vue, the package `@ph-badge/vue` has the right deps to use either with Vue 2 or Vue 3.
+
+<Callout type='danger'>
+  Currently only is availabke for react, all the packages working but I wanna test it and find a way
+  to create types for each one.
+</Callout>
