--- a/apps/sandbox/src/pages/changelog.mdx
+++ b/apps/sandbox/src/pages/changelog.mdx
@@ -1,8 +1,10 @@
 ---
 title: "Changelog"
-layout: ../layouts/main.astro
 ---
 
 import Logger from "../components/logger.astro";
+import Layout from "../layouts/main.astro";
 
-<Logger title='1.0.0' description='Improve features like styles by css.' />
+<Layout title='Changelog'>
+  <Logger title='1.0.0' description='Initial version, react package for test purposes.' />
+</Layout>
