--- a/apps/sandbox/src/content/docs/installation.mdx
+++ b/apps/sandbox/src/content/docs/installation.mdx
@@ -12,6 +12,6 @@ Pick your favorite framework / library and install the package.
 For vue, the package `@ph-badge/vue` has the right deps to use either with Vue 2 or Vue 3.
 
 <Callout type='danger'>
-  Currently only is availabke for react, all the packages working but I wanna test it and find a way
+  Currently only is available for react, all the packages working but I wanna test it and find a way
   to create types for each one.
 </Callout>
